Created basis of BlueLib.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
     <head>
 
+        <meta charset="utf-8">
+        <title>BlueDashProII</title>
+
         <!-- Vendor Libraries -->
         <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css">
 
