Started dash layout.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,24 @@
 
             <!-- Last Update -->
             <div class="row mt-n5 pt-2 lead">
-                Last updated&nbsp;<span id="lastupdated-dash">never</span>.
+                <div class="vw-100 text-center">
+                    Last updated&nbsp;<span id="lastupdated-dash">never</span>.
+                </div>
+            </div>
+
+            <!-- Match Information -->
+            <div class="row my-3">
+
+                <!-- Last Match -->
+                <div class="col-6">
+                    <h1 class="text-center display-3">Last Match</h1>
+                </div>
+
+                <!-- Next Match -->
+                <div class="col-6">
+                    <h1 class="text-center display-3">Next Match</h1>
+                </div>
+
             </div>
 
         </div>
