Added match times.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                     <!-- Title -->
                     <h1 class="text-center display-2 py-5">Last Match</h1>
 
+                    <!-- Metadata -->
+                    <label class="mt-0 mb-1 lead" id="last-time">Unknown time.</label>
+
                     <!-- Alliances -->
                     <table class="table table-striped table-dark table-borderless rounded shadow-sm">
                         <thead class="display-3 text-center thead-dark rounded-top">
@@ -89,6 +92,9 @@
                     <!-- Title -->
                     <h1 class="text-center display-2 py-5">Next Match</h1>
 
+                    <!-- Metadata -->
+                    <label class="mt-0 mb-1 lead" id="next-time">Unknown time.</label>
+
                     <!-- Alliances -->
                     <table class="table table-striped table-dark table-borderless rounded shadow-sm">
                         <thead class="display-3 text-center thead-dark rounded-top">
@@ -118,10 +124,10 @@
             </div>
 
             <!-- Scoring & Rank -->
-            <div class="row my-3 px-5">
+            <div class="row px-5">
 
                 <!-- Last Match Score -->
-                <div class="col-6 px-5 ml-n2 mr-2">
+                <div class="col-6 px-5 ml-n2 mr-1 mt-n3">
 
                     <table class="table table-dark table-borderless bg-super-dark rounded">
                         <tbody class="display-3 text-center rounded">
@@ -135,7 +141,7 @@
                 </div>
 
                 <!-- Rank -->
-                <div class="col-6 px-5 ml-2 mr-n2 display-4 text-center">
+                <div class="col-6 px-5 mr-n2 ml-1 display-4 text-center">
                     
                     <label class="mt-2">Rank: </label>
                     <span id="rank">?</span>
