--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                 <!-- Event Key -->
                 <div class="col-6 text-center text-muted">
-                    Show data for current event, <span id="eventkey">?</span>.
+                    Current event, <span id="eventkey">?</span>.
                 </div>
 
                 <!-- Last Update -->
@@ -58,7 +58,7 @@
                     <h1 class="text-center display-2 py-5">Last Match</h1>
 
                     <!-- Metadata -->
-                    <label class="mt-0 mb-1 lead" id="last-time">Unknown time.</label>
+                    <label class="mt-0 mb-1 lead display-5" id="last-time">Unknown time.</label>
 
                     <!-- Alliances -->
                     <table class="table table-striped table-dark table-borderless rounded shadow-sm">
@@ -70,16 +70,16 @@
                         </thead>
                         <tbody class="display-4 text-center rounded-bottom">
                             <tr>
-                                <td class="py-3" id="last-red-1">?</td>
-                                <td class="py-3" id="last-blue-1">?</td>
+                                <td class="py-3" id="last-red-1">&ZeroWidthSpace;</td>
+                                <td class="py-3" id="last-blue-1">&ZeroWidthSpace;</td>
                             </tr>
                             <tr>
-                                <td class="py-3" id="last-red-2">?</td>
-                                <td class="py-3" id="last-blue-2">?</td>
+                                <td class="py-3" id="last-red-2">&ZeroWidthSpace;</td>
+                                <td class="py-3" id="last-blue-2">&ZeroWidthSpace;</td>
                             </tr>
                             <tr class="rounded-bottom">
-                                <td class="py-3 rounded-bottom-left" id="last-red-3">?</td>
-                                <td class="py-3 rounded-bottom-right" id="last-blue-3">?</td>
+                                <td class="py-3 rounded-bottom-left" id="last-red-3">&ZeroWidthSpace;</td>
+                                <td class="py-3 rounded-bottom-right" id="last-blue-3">&ZeroWidthSpace;</td>
                             </tr>
                         </tbody>
                     </table>
@@ -93,7 +93,7 @@
                     <h1 class="text-center display-2 py-5">Next Match</h1>
 
                     <!-- Metadata -->
-                    <label class="mt-0 mb-1 lead" id="next-time">Unknown time.</label>
+                    <label class="mt-0 mb-1 lead display-5" id="next-time">Unknown time.</label>
 
                     <!-- Alliances -->
                     <table class="table table-striped table-dark table-borderless rounded shadow-sm">
@@ -105,16 +105,16 @@
                         </thead>
                         <tbody class="display-4 text-center rounded-bottom">
                             <tr>
-                                <td class="py-3" id="next-red-1">?</td>
-                                <td class="py-3" id="next-blue-1">?</td>
+                                <td class="py-3" id="next-red-1">&ZeroWidthSpace;</td>
+                                <td class="py-3" id="next-blue-1">&ZeroWidthSpace;</td>
                             </tr>
                             <tr>
-                                <td class="py-3" id="next-red-2">?</td>
-                                <td class="py-3" id="next-blue-2">?</td>
+                                <td class="py-3" id="next-red-2">&ZeroWidthSpace;</td>
+                                <td class="py-3" id="next-blue-2">&ZeroWidthSpace;</td>
                             </tr>
                             <tr class="rounded-bottom">
-                                <td class="py-3 rounded-bottom-left" id="next-red-3">?</td>
-                                <td class="py-3 rounded-bottom-right" id="next-blue-3">?</td>
+                                <td class="py-3 rounded-bottom-left" id="next-red-3">&ZeroWidthSpace;</td>
+                                <td class="py-3 rounded-bottom-right" id="next-blue-3">&ZeroWidthSpace;</td>
                             </tr>
                         </tbody>
                     </table>
@@ -129,11 +129,11 @@
                 <!-- Last Match Score -->
                 <div class="col-6 px-5 ml-n2 mr-1 mt-n3">
 
-                    <table class="table table-dark table-borderless bg-super-dark rounded">
+                    <table class="table table-dark table-borderless bg-super-dark rounded ml-n2">
                         <tbody class="display-3 text-center rounded">
                             <tr class="rounded">
-                                <td class="rounded-left text-danger" id="last-red-score">?</td>
-                                <td class="rounded-right text-primary" id="last-blue-score">?</td>
+                                <td class="rounded-left text-danger" id="last-red-score">&ZeroWidthSpace;</td>
+                                <td class="rounded-right text-primary" id="last-blue-score">&ZeroWidthSpace;</td>
                             </tr>
                         </body>
                     </table>
@@ -144,7 +144,7 @@
                 <div class="col-6 px-5 mr-n2 ml-1 display-4 text-center">
                     
                     <label class="mt-2">Rank: </label>
-                    <span id="rank">?</span>
+                    <span id="rank">Unknown</span>
 
                 </div>
 
