--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
                     <h1 class="text-center display-2 py-5">Last Match</h1>
 
                     <!-- Metadata -->
-                    <label class="mt-0 mb-1 lead display-5" id="last-time">Unknown time.</label>
+                    <label class="mt-0 mb-2 lead display-4">
+                        <span id="last-type"></span>#<span id="last-number">?</span>
+                        <span class="display-6">(<span id="last-time">Unknown Time</span>)</span>
+                    </label>
 
                     <!-- Alliances -->
                     <table class="table table-striped table-dark table-borderless rounded shadow-sm">
@@ -93,7 +96,10 @@
                     <h1 class="text-center display-2 py-5">Next Match</h1>
 
                     <!-- Metadata -->
-                    <label class="mt-0 mb-1 lead display-5" id="next-time">Unknown time.</label>
+                    <label class="mt-0 mb-2 lead display-4">
+                        <span id="next-type"></span>#<span id="next-number">?</span>
+                        <span class="display-6">(<span id="next-time">Unknown Time</span>)</span>
+                    </label>
 
                     <!-- Alliances -->
                     <table class="table table-striped table-dark table-borderless rounded shadow-sm">
@@ -168,7 +174,8 @@
             <input type="number" autocomplete="off" class="form-control bg-dark border-dark text-light autohide-counter" id="teamnumber-field" style="max-width: 25rem; margin-left: auto; margin-right: auto;"> 
             
             <!-- Save Button -->
-            <button class="mt-5 py-2 btn btn-dark" style="min-width: 10rem;" onclick="saveSettings();">Save</button>
+            <button class="mt-5 py-2 btn btn-dark" style="min-width: 10rem;" onclick="saveSettings();">Save</button><br>
+            <label class="mt-0 font-weight-bold text-muted" id="status-field"></label>
 
         </div>
 
