Added (C), switched to manual event keying.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <!-- Meta -->
             <div class="row mt-n5 pt-2 lead text-muted auto-hide hide-invert">
 
-                <!-- Event Key -->
+                <!-- Copyright -->
                 <div class="col-6 text-center text-muted">
-                    Current event, <span id="eventkey">?</span>.
+                    &copy;2020 Benjamin Sykes, Team 5980
                 </div>
 
                 <!-- Last Update -->
@@ -171,7 +171,11 @@
 
             <!-- Team Number -->
             <label class="mt-5">Team Number</label><br>
-            <input type="number" autocomplete="off" class="form-control bg-dark border-dark text-light autohide-counter" id="teamnumber-field" style="max-width: 25rem; margin-left: auto; margin-right: auto;"> 
+            <input type="number" autocomplete="off" class="form-control bg-dark border-dark text-light autohide-counter" id="teamnumber-field" style="max-width: 25rem; margin-left: auto; margin-right: auto;">
+
+            <!-- Team Number -->
+            <label class="mt-5">Event Key</label><br>
+            <input type="text" autocomplete="off" class="form-control bg-dark border-dark text-light" id="eventkey-field" style="max-width: 25rem; margin-left: auto; margin-right: auto;">
             
             <!-- Save Button -->
             <button class="mt-5 py-2 btn btn-dark" style="min-width: 10rem;" onclick="saveSettings();">Save</button><br>
@@ -185,7 +189,7 @@
             <!-- Title -->
             <div class="my-5 pb-4">
                 <h1 class="display-3">BlueDashPro&#8545;</h1>
-                <p>&copy; 2020 - Benjamin Sykes</p>
+                <p>&copy; 2020 - <a class="text-light link-text" href="https://github.com/sykeben">Benjamin Sykes</a></p>
             </div>
 
             <!-- Divider -->
