--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
         <meta charset="utf-8">
         <title>BlueDashPro&#8545;</title>
+        <link rel="shortcut icon" type="image/png" href="branding/Favicon.png">
 
         <!-- Vendor Libraries -->
         <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css">
@@ -22,6 +23,9 @@
         <!-- Navbar -->
         <nav class="auto-hide navbar navbar-expand navbar-dark bg-primary shadow-sm border-bottom border-dark">
             <div class="collapse navbar-collapse">
+                <div class="brand">
+                    <img class="p-0 my-n1 mr-1" src="branding/Logo.png" height="32">
+                </div>
                 <div class="navbar-nav">
                     <a class="nav-item nav-link nav-page active" href="#dashboard" data-page="dashboard">Dashboard</a>
                     <a class="nav-item nav-link nav-page" href="#settings" data-page="settings">Settings</a>
