Changed verification method.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
 
         <meta charset="utf-8">
+        <meta name="google-site-verification" content="S2RV7EmZkENn6i5TQ8pJGkv8PIdCsYUUcgT1ibmeFHw" />
         <title>BlueDashPro&#8545;</title>
         <link rel="shortcut icon" type="image/png" href="branding/Favicon.png">
 
